--- a/Kconfig
+++ b/Kconfig
@@ -156,15 +156,6 @@ menu "LVGL configuration"
                     radiuses are saved).
                     Set to 0 to disable caching.
 
-            config LV_LAYER_SIMPLE_BUF_SIZE
-                int "Optimal size to buffer the widget with opacity"
-                default 24576
-                help
-                    "Simple layers" are used when a widget has `style_opa < 255`
-                    to buffer the widget into a layer and blend it as an image
-                    with the given opacity. Note that `bg_opa`, `text_opa` etc
-                    don't require buffering into layer.
-
             config LV_IMG_CACHE_DEF_SIZE
                 int "Default image cache size. 0 to disable caching."
                 default 0
@@ -214,12 +205,9 @@ menu "LVGL configuration"
         endmenu
 
         menu "GPU"
-            config LV_USE_GPU_ARM2D
-                bool "Enable Arm's 2D image processing library (Arm-2D) for all Cortex-M processors."
-                default n
-                help
-                    Must deploy arm-2d library to your project and add include PATH for "arm_2d.h".
-                
+            config LV_USE_EXTERNAL_RENDERER
+                bool
+
             config LV_USE_GPU_STM32_DMA2D
                 bool "Enable STM32 DMA2D (aka Chrom Art) GPU."
             config LV_GPU_DMA2D_CMSIS_INCLUDE
@@ -230,16 +218,6 @@ menu "LVGL configuration"
                     Must be defined to include path of CMSIS header of target processor
                     e.g. "stm32f769xx.h" or "stm32f429xx.h"
 
-            config LV_USE_GPU_SWM341_DMA2D
-                bool "Enable SWM341 DMA2D GPU."
-            config LV_GPU_SWM341_DMA2D_INCLUDE
-                string "include path of CMSIS header of target processor"
-                depends on LV_USE_GPU_SWM341_DMA2D
-                default "SWM341.h"
-                help
-                    Must be defined to include path of CMSIS header of target processor
-                    e.g. "SWM341.h"
-                    
             config LV_USE_GPU_NXP_PXP
                 bool "Use NXP's PXP GPU iMX RTxxx platforms."
             config LV_USE_GPU_NXP_PXP_AUTO_INIT
@@ -260,17 +238,12 @@ menu "LVGL configuration"
 
             config LV_USE_GPU_SDL
                 bool "Use SDL renderer API"
+                select LV_USE_EXTERNAL_RENDERER
                 default n
             config LV_GPU_SDL_INCLUDE_PATH
                 string "include path of SDL header"
                 depends on LV_USE_GPU_SDL
                 default "SDL2/SDL.h"
-            config LV_GPU_SDL_LRU_SIZE
-                int "Maximum buffer size to allocate for rotation"
-                depends on LV_USE_GPU_SDL
-                default 8388608
-                help
-                    Texture cache size, 8MB by default.
         endmenu
 
         menu "Logging"
@@ -401,7 +374,7 @@ menu "LVGL configuration"
                     bool "Left middle"
                 config LV_PERF_MONITOR_ALIGN_RIGHT_MID
                     bool "Right middle"
-                config LV_PERF_MONITOR_ALIGN_CENTER
+                config LV_PERF_MONITOR_ALIGN_BOTTOM_CENTER
                     bool "Center"
             endchoice
 
@@ -430,7 +403,7 @@ menu "LVGL configuration"
                     bool "Left middle"
                 config LV_MEM_MONITOR_ALIGN_RIGHT_MID
                     bool "Right middle"
-                config LV_MEM_MONITOR_ALIGN_CENTER
+                config LV_MEM_MONITOR_ALIGN_BOTTOM_CENTER
                     bool "Center"
             endchoice
 
@@ -742,7 +715,6 @@ menu "LVGL configuration"
             default y if !LV_CONF_MINIMAL
         config LV_USE_CANVAS
             bool "Canvas. Dependencies: lv_img."
-            select LV_USE_IMG
             default y if !LV_CONF_MINIMAL
         config LV_USE_CHECKBOX
             bool "Check Box"
@@ -842,13 +814,6 @@ menu "LVGL configuration"
         config LV_USE_MSGBOX
             bool "Msgbox."
             default y if !LV_CONF_MINIMAL
-        config LV_USE_SPAN
-            bool "span"
-            default y if !LV_CONF_MINIMAL
-        config LV_SPAN_SNIPPET_STACK_SIZE
-            int "Maximum number of span descriptor"
-            default 64
-            depends on LV_USE_SPAN
         config LV_USE_SPINBOX
             bool "Spinbox."
             default y if !LV_CONF_MINIMAL
@@ -864,6 +829,13 @@ menu "LVGL configuration"
         config LV_USE_WIN
             bool "Win"
             default y if !LV_CONF_MINIMAL
+        config LV_USE_SPAN
+            bool "span"
+            default y if !LV_CONF_MINIMAL
+        config LV_SPAN_SNIPPET_STACK_SIZE
+            int "Maximum number of span descriptor"
+            default 64
+            depends on LV_USE_SPAN
     endmenu
 
     menu "Themes"
@@ -902,54 +874,53 @@ menu "LVGL configuration"
         config LV_USE_FS_STDIO
             bool "File system on top of stdio API"
         config LV_FS_STDIO_LETTER
-            int "Set an upper cased letter on which the drive will accessible (e.g. 'A' i.e. 65 )"
-            default 0
-            depends on LV_USE_FS_STDIO
+            string "Set an upper cased letter on which the drive will accessible (e.g. 'A' i.e. 65 )"
+            depends on LV_USE_FS_STDIO != 0
         config LV_FS_STDIO_PATH
             string "Set the working directory"
-            depends on LV_USE_FS_STDIO
+            depends on LV_USE_FS_STDIO != 0
         config LV_FS_STDIO_CACHE_SIZE
             string ">0 to cache this number of bytes in lv_fs_read()"
-            depends on LV_USE_FS_STDIO
+            depends on LV_USE_FS_STDIO != 0
 
         config LV_USE_FS_POSIX
             bool "File system on top of posix API"
         config LV_FS_POSIX_LETTER
             int "Set an upper cased letter on which the drive will accessible (e.g. 'A' i.e. 65)"
             default 0
-            depends on LV_USE_FS_POSIX
+            depends on LV_USE_FS_POSIX != 0
         config LV_FS_POSIX_PATH
             string "Set the working directory"
-            depends on LV_USE_FS_POSIX
+            depends on LV_USE_FS_POSIX != 0
         config LV_FS_POSIX_CACHE_SIZE
             int ">0 to cache this number of bytes in lv_fs_read()"
             default 0
-            depends on LV_USE_FS_POSIX
+            depends on LV_USE_FS_POSIX != 0
 
         config LV_USE_FS_WIN32
             bool "File system on top of Win32 API"
         config LV_FS_WIN32_LETTER
             int "Set an upper cased letter on which the drive will accessible (e.g. 'A' i.e. 65)"
             default 0
-            depends on LV_USE_FS_WIN32
+            depends on LV_USE_FS_WIN32 != 0
         config LV_FS_WIN32_PATH
             string "Set the working directory"
-            depends on LV_USE_FS_WIN32
+            depends on LV_USE_FS_WIN32 != 0
         config LV_FS_WIN32_CACHE_SIZE
             int ">0 to cache this number of bytes in lv_fs_read()"
             default 0
-            depends on LV_USE_FS_WIN32
+            depends on LV_USE_FS_WIN32 != 0
 
         config LV_USE_FS_FATFS
             bool "File system on top of FatFS"
         config LV_FS_FATFS_LETTER
             int "Set an upper cased letter on which the drive will accessible (e.g. 'A' i.e. 65)"
             default 0
-            depends on LV_USE_FS_FATFS
+            depends on LV_USE_FS_FATFS != 0
         config LV_FS_FATFS_CACHE_SIZE
             int ">0 to cache this number of bytes in lv_fs_read()"
             default 0
-            depends on LV_USE_FS_FATFS
+            depends on LV_USE_FS_FATFS != 0
 
         config LV_USE_PNG
             bool "PNG decoder library"
@@ -992,8 +963,8 @@ menu "LVGL configuration"
 
         config LV_USE_FFMPEG
             bool "FFmpeg library"
-        config LV_FFMPEG_DUMP_FORMAT
-            bool "Dump format"
+        config LV_FFMPEG_AV_DUMP_FORMAT
+            bool "Dump av format"
             depends on LV_USE_FFMPEG
             default n
     endmenu
@@ -1005,18 +976,6 @@ menu "LVGL configuration"
 
         config LV_USE_MONKEY
             bool "Enable Monkey test"
-            default n
-
-        config LV_USE_GRIDNAV
-            bool "Enable grid navigation"
-            default n 
-
-        config LV_USE_FRAGMENT
-            bool "Enable lv_obj fragment"
-            default n 
-
-        config LV_USE_IMGFONT
-            bool "draw img in label or span obj"
             default n
     endmenu
 
